Fix footer scrollbar.
Fixes #42

--- a/css/style.css
+++ b/css/style.css
@@ -530,3 +530,7 @@ input {
 	max-width: 100%;
 	padding: 3px 5px;
 }
+
+#footer {
+	overflow: hidden;
+}
